     [Tomaz Muraus]

   - Don't throw an exception if a node object is missing an "image" attribute
     in the list nodes / get node response.

     This could happen if node is in an error state. (LIBCLOUD-455)
     [Dustin Spicuzza, Tomaz Muraus]

   - Update CloudStack driver to better handle errors and throw ProviderError
     instead of a generic Exception.
     [Tomaz Muraus]

  *) Storage

    - Allow user to specify 'Content-Disposition' header in the CloudFiles
      driver by passing 'content_disposition' key in the extra dictionary of
      the upload object methods. (LIBCLOUD-430)
      [Michael Farrell]

    - Fix CloudFiles driver so it references a correct service catalog entry for
      the CDN endpoint.

      This was broken in the 0.14.0-beta3 release when we migrated all the
      Rackspace drivers to use auth 2.0 by default.
      [John Obelenus]

    - Update storage drivers to default to "application/octet-stream"
      Content-Type if none is provided and none can be guessed.
      (LIBCLOUD-433)
      [Michael Farrell]

  *) DNS

    - Implement iterate_* methods in the Route53 driver and makes it work
      correctly if there are more results which can fit on a single page.
      Previously, only first 100 results were returned. (LIBCLOUD-434)
      [Chris Clarke]

Changes with Apache Libcloud 0.14.0-beta3

  *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]

    - Fix libcloud.utils.py3.urlquote so it works with unicode strings under
      Python 2. (LIBCLOUD-429)
      [Michael Farrell]

  *) Compute

    - Refactor Rackspace driver classes and make them easier to use. Now there